--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: PS homepage
 email: your-email@domain.com
-author: GitHub User
+author: Pinetree Shine
 
 # Copyright setting
 # You can use any html code, currently below placeholders are available:
@@ -39,8 +39,8 @@ author: GitHub User
 # For example:
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
-#
-copyright: "Unpublished Work (cleft) 2017-{currentYear} {author}"
+#   "Unpublished Work (cleft) 2017-{currentYear} {author}"
+copyright: "Copyright (c) 2017-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
