--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Welcome to PS homepage"
-  subheading: "this is subheading"
-  banner: "Your image url"
+   heading: "Your awesome heading"
+   subheading: "Your awesome subheading"
+   banner: "Your image url"
