--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ yat:
 
 
 # Google analytics
-# google_analytics: [Tracking ID]
+google_analytics: [G-5L8JPGP6D8]
 
 # If you want to generate website sitemap, you can set true
 sitemap: true
