--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Life in the US as a chemical engineer.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://pinetree-shine.github.io/" # the base hostname & protocol for your site, e.g. https://example.com
 favicon: "/assets/images/fabicon/fabicon.png" # the favicon for your site
 
 # Yat date format
