--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,10 @@ lang: "ko"  # default lang is en
 # Translate languges
 # langs refer to https://cloud.google.com/translate/docs/languages
 translate_langs:
+  - lang: ko
+    img: https://cdn.countryflags.com/thumbs/south-korea/flag-400.png
+    text: Korean
+
   - lang: en
     img: https://cdn.countryflags.com/thumbs/united-states-of-america/flag-400.png
     text: English
@@ -89,17 +93,13 @@ translate_langs:
 #     img: https://cdn.countryflags.com/thumbs/france/flag-400.png
 #     text: French
 #
-  - lang: zh-CN
-    img: https://cdn.countryflags.com/thumbs/china/flag-400.png
-    text: Chinese(Simple)
+#  - lang: zh-CN
+#    img: https://cdn.countryflags.com/thumbs/china/flag-400.png
+#    text: Chinese(Simple)
 #
 #   - lang: ja
 #     img: https://cdn.countryflags.com/thumbs/japan/flag-400.png
 #     text: Japanese
-#
-#  - lang: ko
-#    img: https://cdn.countryflags.com/thumbs/south-korea/flag-400.png
-#    text: Korean
 #
 #   - lang: ru
 #     img: https://cdn.countryflags.com/thumbs/russia/flag-400.png
@@ -161,7 +161,7 @@ header_pages:
 defaults:
   home:
     heading: "Life in the US"
-    subheading: "Chemical Engineer living in TX"
+    subheading: "My personal space"
     banner: "/assets/images/banners/home_crop.jpg" # need to change the link in index.html
 
 # Banner default settings
